--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -22,6 +22,7 @@ wso2::template_list:
   - repository/conf/identity/identity.xml
   - repository/conf/identity/application-authentication.xml
   - repository/conf/identity/EndpointConfig.properties
+  - repository/conf/log4j.properties
 #  - repository/conf/security/cipher-text.properties
 #  - repository/conf/security/cipher-tool.properties
 #  - bin/ciphertool.sh
@@ -47,17 +48,14 @@ wso2::service_name: wso2am
 wso2::hostname: am.dev.wso2.org
 wso2::mgt_hostname: am.dev.wso2.org
 
-wso2::apim_store:
-  host: store.dev.wso2.org
-  port: 9443
+wso2::analytics:
+  enabled : false
+  server_host : apim.analytics.dev.wso2.org
+  server_port : 7612
+  server_username : admin
+  server_password : admin
+  skip_event_receiver_connection : false
 
-wso2::apim_publisher:
-  host: pub.dev.wso2.org
-  port: 9443
-
-wso2::apim_traffic_manager: {}
-wso2::apim_gateway: {}
-wso2::apim_keymanager: {}
 
 wso2::hosts_mapping:
   apim_keymanager:
@@ -152,6 +150,36 @@ wso2::master_datasources:
       validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
       validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
+    wso2_mb_store_db:
+      name: WSO2_MB_STORE_DB
+      description: The datasource used for message broker database
+      driver_class_name: "%{hiera('wso2::datasources::h2::driver_class_name')}"
+      url: jdbc:h2:repository/database/WSO2MB_DB;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000
+      username: "%{hiera('wso2::datasources::common::username')}"
+      password: "%{hiera('wso2::datasources::common::password')}"
+      jndi_config: WSO2MBStoreDB
+      max_active: "%{hiera('wso2::datasources::common::max_active')}"
+      max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
+      test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
+      default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
+      validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
+      validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
+
+    wso2_am_stats_db:
+      name: WSO2AM_STATS_DB
+      description: The datasource used for getting statistics to API Manager
+      driver_class_name: "%{hiera('wso2::datasources::h2::driver_class_name')}"
+      url: jdbc:h2:../tmpStatDB/WSO2AM_STATS_DB;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000;AUTO_SERVER=TRUE
+      username: "%{hiera('wso2::datasources::common::username')}"
+      password: "%{hiera('wso2::datasources::common::password')}"
+      jndi_config: jdbc/WSO2AM_STATS_DB
+      max_active: "%{hiera('wso2::datasources::common::max_active')}"
+      max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
+      test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
+      default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
+      validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
+      validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
+
 wso2::mb_store_datasource: wso2_mb_store_db
 
 wso2::enable_advance_throttling: false
@@ -170,6 +198,7 @@ wso2::apply_key_manager_specific_configurations: false
 wso2::apply_publisher_specific_configurations: false
 wso2::apply_store_specific_configurations: false
 wso2::apply_gateway_specific_configurations: false
+wso2::enable_log_analyzer: true
 
 wso2::apim_gateway:
   host: mgt.gw.dev.wso2.org
@@ -196,6 +225,14 @@ wso2::apim_keymanager:
   port: 9443
   username: "%{hiera('wso2::super_admin::username')}"
   password: "%{hiera('wso2::super_admin::password')}"
+
+wso2::apim_store:
+  host: store.dev.wso2.org
+  port: 9443
+
+wso2::apim_publisher:
+  host: pub.dev.wso2.org
+  port: 9443
 
 # Secure vault configuration
 #wso2::enable_secure_vault: true
