--- a/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
+++ b/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
@@ -85,7 +85,7 @@ wso2::stats_datasources:
     name: WSO2AM_STATS_DB
     description: The datasource used for setting statistics to API Manager
     driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
-    url: jdbc:mysql://192.168.57.210:3306/amstatsdb?autoReconnect=true
+    url: jdbc:mysql://192.168.57.210:3306/statdb?autoReconnect=true
     username: "%{hiera('wso2::datasources::mysql::username')}"
     password: "%{hiera('wso2::datasources::mysql::password')}"
     max_active: "%{hiera('wso2::datasources::common::max_active')}"
