--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -35,7 +35,7 @@ wso2::template_list:
 
 wso2::file_list:
   - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
-  - "repository/resources/security/%{hiera('wso2::key_store')}"
+ # - "repository/resources/security/%{hiera('wso2::key_store')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
 wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
 
@@ -79,6 +79,9 @@ wso2::hosts_mapping:
   svn:
     ip: 192.168.100.1
     name: svn.gw.am.dev.wso2.org
+  apim_analytics_server:
+    ip: 192.168.57.29
+    name: apim.analytics.dev.wso2.org
 
 wso2::is_datasource: wso2_am_db
 wso2::am_datasource: wso2_am_db
