--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-manager.yaml
@@ -57,7 +57,7 @@ wso2::dep_sync:
   repository_type: svn
   svn:
     url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
-    user: svnuser
+    user: samitha@wso2.com
     password: password
     append_tenant_id: true
 
@@ -91,7 +91,9 @@ wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
 
 wso2::file_list:
-  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+#  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::enable_advance_throttling: true
 wso2::enable_data_publisher: true
