--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/gateway-worker.yaml
@@ -25,6 +25,12 @@ wso2::apim_traffic_manager:
   username: "%{hiera('wso2::super_admin::username')}"
   password: "%{hiera('wso2::super_admin::password')}"
 
+wso2::template_list:
+  - repository/deployment/server/synapse-configs/default/api/_AuthorizeAPI_.xml
+  - repository/deployment/server/synapse-configs/default/api/_RevokeAPI_.xml
+  - repository/deployment/server/synapse-configs/default/api/_TokenAPI_.xml
+  - repository/deployment/server/synapse-configs/default/api/_UserInfoAPI_.xml
+
 wso2::clustering:
   enabled: true
   domain: gw.am.wso2.domain
@@ -59,7 +65,7 @@ wso2::dep_sync:
   repository_type: svn
   svn:
     url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
-    user: svnuser
+    user: samitha@wso2.com
     password: password
     append_tenant_id: true
 
@@ -83,7 +89,9 @@ wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
 
 wso2::file_list:
-  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+ # - "repository/resources/security/%{hiera('wso2::trust_store')}"
+   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
+   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
