--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/traffic-manager.yaml
@@ -19,15 +19,14 @@ wso2::hostname: tm.dev.wso2.org
 wso2::template_list:
   - repository/conf/broker.xml
 
-wso2::file_list:
-  - "repository/resources/security/%{hiera('wso2::key_store')}"
-  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+#wso2::file_list:
+#  - "repository/resources/security/%{hiera('wso2::key_store')}"
+#  - "repository/resources/security/%{hiera('wso2::trust_store')}"
 
 wso2::enable_traffic_manager_specific_axis2_configurations: true
 wso2::enable_traffic_manager_specific_registry_configurations: true
 
 wso2::remove_file_list:
-  - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
   - "repository/deployment/server/jaggeryapps"
   - "repository/deployment/server/webapps"
 
