--- a/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
+++ b/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
@@ -37,6 +37,7 @@ wso2::portal:
 wso2::template_list:
   - repository/conf/datasources/analytics-datasources.xml
   - repository/conf/analytics/spark/spark-jdbc-config.xml
+  - repository/conf/datasources/stats-datasources.xml
 
 wso2::directory_list:
   - dbscripts/identity
@@ -83,6 +84,7 @@ wso2::analytics_datasources:
 wso2::stats_datasources:
   wso2_am_stats_db:
     name: WSO2AM_STATS_DB
+    jndi_config: jdbc/WSO2AM_STATS_DB
     description: The datasource used for setting statistics to API Manager
     driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
     url: jdbc:mysql://192.168.57.210:3306/statdb?autoReconnect=true
