--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-0/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-0/default.yaml
@@ -125,13 +125,13 @@ wso2::master_datasources:
     validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
-wso2::enable_advance_throttling: false
+wso2::enable_advance_throttling: true
 wso2::enable_thrift_server: true
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: ThriftClient
-wso2::enable_data_publisher: false
+wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
-wso2::enable_jms_connection_details: false
+wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
