--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
@@ -135,7 +135,7 @@ wso2::master_datasources:
       url: jdbc:mysql://192.168.57.210:3306/mbstoredb?autoReconnect=true
       username: "%{hiera('wso2::datasources::mysql::username')}"
       password: "%{hiera('wso2::datasources::mysql::password')}"
-      jndi_config: jdbc/WSO2_MB_STORE_DB
+      jndi_config: WSO2MBStoreDB
       max_active: "%{hiera('wso2::datasources::common::max_active')}"
       max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
       test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
@@ -203,13 +203,13 @@ wso2::master_datasources:
       validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
       validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
-wso2::enable_advance_throttling: false
+wso2::enable_advance_throttling: true
 wso2::enable_thrift_server: true
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: ThriftClient
-wso2::enable_data_publisher: false
+wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
-wso2::enable_jms_connection_details: false
+wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
