--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-0/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-0/default.yaml
@@ -27,6 +27,9 @@ wso2::template_list:
 #  - bin/ciphertool.sh
 #  - password-tmp
 
+#wso2::file_list:
+#  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+
 #wso2::ports:
 #  proxyPort:
 #    http: 80
@@ -73,6 +76,8 @@ wso2::apim_publisher:
 # Use H2 based wso2_am_db in a stand-alone setup. In a clustered setup this should point to a MySQL data source
 wso2::is_datasource: wso2_am_db
 wso2::am_datasource: wso2_am_db
+wso2::mb_store_datasource: wso2_mb_store_db
+wso2::analytics: {}
 
 ## Uncomment the following key_store and trust_store to include the certificate of keymanager in gateway in a clustered setup
 #wso2::key_store: wso2carbon.jks
@@ -125,13 +130,13 @@ wso2::master_datasources:
     validation_query: "%{hiera('wso2::datasources::h2::validation_query')}"
     validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
-wso2::enable_advance_throttling: false
+wso2::enable_advance_throttling: true
 wso2::enable_thrift_server: true
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: ThriftClient
-wso2::enable_data_publisher: false
+wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
-wso2::enable_jms_connection_details: false
+wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
