--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
@@ -78,7 +78,8 @@ wso2::am_datasource: wso2_am_db
 ## Uncomment the following key_store and trust_store to include the certificate of keymanager in gateway in a clustered setup
 #wso2::key_store: wso2carbon.jks
 #wso2::trust_store: client-truststore.jks
-
+wso2::key_store: wso2carbon.jks
+wso2::trust_store: client-truststore.jks
 #wso2::am_datasources:
 #  wso2_am_db:
 #    name: WSO2_AM_DB
@@ -135,7 +136,7 @@ wso2::master_datasources:
       url: jdbc:mysql://192.168.57.210:3306/mbstoredb?autoReconnect=true
       username: "%{hiera('wso2::datasources::mysql::username')}"
       password: "%{hiera('wso2::datasources::mysql::password')}"
-      jndi_config: jdbc/WSO2_MB_STORE_DB
+      jndi_config: WSO2MBStoreDB
       max_active: "%{hiera('wso2::datasources::common::max_active')}"
       max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
       test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
@@ -203,13 +204,13 @@ wso2::master_datasources:
       validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
       validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
 
-wso2::enable_advance_throttling: false
+wso2::enable_advance_throttling: true
 wso2::enable_thrift_server: true
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: ThriftClient
-wso2::enable_data_publisher: false
+wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
-wso2::enable_jms_connection_details: false
+wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
@@ -239,6 +240,8 @@ wso2::mb_store_datasource: wso2_mb_store_db
 
 wso2::file_list:
   - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+  - "repository/resources/security/%{hiera('wso2::key_store')}"
 
 wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
 
