--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
@@ -75,9 +75,6 @@ wso2::apim_publisher:
 wso2::is_datasource: wso2_am_db
 wso2::am_datasource: wso2_am_db
 
-## Uncomment the following key_store and trust_store to include the certificate of keymanager in gateway in a clustered setup
-#wso2::key_store: wso2carbon.jks
-#wso2::trust_store: client-truststore.jks
 wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
 #wso2::am_datasources:
@@ -240,8 +237,8 @@ wso2::mb_store_datasource: wso2_mb_store_db
 
 wso2::file_list:
   - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
-#  - "repository/resources/security/%{hiera('wso2::trust_store')}"
-#  - "repository/resources/security/%{hiera('wso2::key_store')}"
+  - "repository/resources/security/%{hiera('wso2::trust_store')}"
+  - "repository/resources/security/%{hiera('wso2::key_store')}"
 
 wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
 
