--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/api-key-manager.yaml
@@ -39,18 +39,8 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://km.dev.wso2.org:9443/acs
 
-wso2::enable_thrift_server: false
+wso2::enable_jms_connection_details: false
+wso2::enable_data_publisher: false
 
-# Uncomment for a distributed setup without a load balancer (when using ThriftClient)
-#wso2::thrift_server_host: 192.168.100.2
-
-wso2::key_validator_client_type: WSClient
-
-#wso2::file_list:
- # - "repository/resources/security/%{hiera('wso2::key_store')}"
- # - "repository/resources/security/%{hiera('wso2::trust_store')}"
-
-#wso2::remove_file_list:
-#  - "repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml"
 
 wso2::apply_key_manager_specific_configurations: true
