--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-manager-dmz.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-manager-dmz.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 ---
-wso2::mgt_hostname: mgt-gw.dev.wso2.org
-wso2::hostname: mgt-gw.dev.wso2.org
+wso2::mgt_hostname: dmz-mgt-gw.dev.wso2.org
+wso2::hostname: dmz-mgt-gw.dev.wso2.org
 
 wso2::template_list:
   - repository/deployment/server/synapse-configs/default/api/_AuthorizeAPI_.xml
@@ -24,7 +24,7 @@ wso2::template_list:
 
 wso2::clustering:
   enabled: true
-  domain: gw.am.wso2.domain
+  domain: dmz-gw.am.wso2.domain
   sub_domain: mgt
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
@@ -34,10 +34,10 @@ wso2::clustering:
   wka:
     members:
       -
-        hostname: 192.168.57.216
+        hostname: 192.168.57.5
         port: 4000
       -
-        hostname: 192.168.57.247
+        hostname: 192.168.57.218
         port: 4000
 
 wso2::dep_sync:
@@ -46,7 +46,7 @@ wso2::dep_sync:
   auto_commit: true
   repository_type: svn
   svn:
-    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
+    url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo-dmz
     user: samitha@wso2.com
     password: password
     append_tenant_id: true
@@ -72,7 +72,7 @@ wso2::sso_authentication:
   login_page: /carbon/admin/login.jsp
   service_provider_id: wso2am-gw
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
-  consumer_service_url: https://gw.dev.wso2.org:9443/acs
+  consumer_service_url: https://dmz-gw.dev.wso2.org:9443/acs
 
 wso2::enable_thrift_server: false
 
