--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/api-publisher.yaml
@@ -15,6 +15,7 @@
 ---
 wso2::mgt_hostname: pub.dev.wso2.org
 wso2::hostname: pub.dev.wso2.org
+wso2::product_profile: api-publisher
 
 wso2::template_list:
   - repository/conf/jndi.properties
