--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-1/default.yaml
@@ -36,6 +36,7 @@ wso2::template_list:
 wso2::service_name: wso2am
 wso2::hostname: am.dev.wso2.org
 wso2::mgt_hostname: am.dev.wso2.org
+wso2::product_profile: default
 
 wso2::apim_traffic_manager:
   host: am.dev.wso2.org
@@ -46,16 +47,18 @@ wso2::apim_traffic_manager:
   username: "%{hiera('wso2::super_admin::username')}"
   password: "%{hiera('wso2::super_admin::password')}"
 
-wso2::apim_gateway:
-  host: am.dev.wso2.org
-  port: 9443
-  api_endpoint_host: am.dev.wso2.org
-  api_endpoint_port: 8280
-  secure_api_endpoint_port: 8243
-  api_token_revoke_endpoint_port: 8280
-  secure_api_token_revoke_endpoint_port: 8243
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
+wso2::environments:
+  apim_gateway_lan:
+    host: am.dev.wso2.org
+    port: 9443
+    api_endpoint_host: am.dev.wso2.org
+    api_endpoint_port: 8280
+    secure_api_endpoint_port: 8243
+    api_token_revoke_endpoint_port: 8280
+    secure_api_token_revoke_endpoint_port: 8243
+    username: "%{hiera('wso2::super_admin::username')}"
+    password: "%{hiera('wso2::super_admin::password')}"
+
 
 wso2::apim_keymanager:
   host: am.dev.wso2.org
