--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -200,8 +200,8 @@ wso2::apply_store_specific_configurations: false
 wso2::apply_gateway_specific_configurations: false
 wso2::enable_log_analyzer: true
 
-wso2:environments:
-  wso2::apim_gateway_lan:
+wso2::environments:
+  apim_gateway_lan:
     host: mgt-gw.dev.wso2.org
     port: 9443
     api_endpoint_host: gw.dev.wso2.org
