--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/api-store.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/api-store.yaml
@@ -15,6 +15,7 @@
 ---
 wso2::mgt_hostname: store.dev.wso2.org
 wso2::hostname: store.dev.wso2.org
+wso2::product_profile: api-store
 
 wso2::clustering:
   enabled: true
@@ -94,3 +95,17 @@ wso2::apply_store_specific_configurations: true
 
 wso2::analytics:
   enabled : true
+
+wso2::environments:
+  apim_gateway_dmz:
+    name: Production and Sandbox environment for DMZ
+    description: This is a hybrid gateway that handles both production and sandbox token traffic, and this resides in the DMZ
+    host: dmz-mgt-gw.dev.wso2.org
+    port: 9443
+    api_endpoint_host: dmz-gw.dev.wso2.org
+    api_endpoint_port: 8280
+    secure_api_endpoint_port: 8243
+    api_token_revoke_endpoint_port: 8280
+    secure_api_token_revoke_endpoint_port: 8243
+    username: "%{hiera('wso2::super_admin::username')}"
+    password: "%{hiera('wso2::super_admin::password')}"
