--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
@@ -14,17 +14,8 @@
 
 ---
 wso2::mgt_hostname: mgt-gw.dev.wso2.org
-wso2::hostname: gw.dev.wso2.org
-wso2::product_profile: gateway-worker
-
-wso2::apim_traffic_manager:
-  host: tm.dev.wso2.org
-  port: 9443
-  receiver_url_port: 9611
-  auth_url_port: 9711
-  jms_url_port: 5672
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
+wso2::hostname: am.dev.wso2.org
+wso2::product_profile: default
 
 wso2::template_list:
   - repository/deployment/server/synapse-configs/default/api/_AuthorizeAPI_.xml
@@ -35,10 +26,11 @@ wso2::template_list:
 wso2::clustering:
   enabled: true
   domain: gw.am.wso2.domain
-  sub_domain: worker
+  sub_domain: mgt
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
 # WKA membership scheme
+  membership_scheme: wka
   membership_scheme: wka
   wka:
     members:
@@ -52,7 +44,7 @@ wso2::clustering:
 wso2::dep_sync:
   enabled: true
   auto_checkout: true
-  auto_commit: false
+  auto_commit: true
   repository_type: svn
   svn:
     url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
@@ -64,19 +56,29 @@ wso2::registry_mounts:
  wso2_config_db:
    path: /_system/config
    target_path: /_system/config
-   read_only: true
+   read_only: false
    registry_root: /
    enable_cache: true
 
  wso2_gov_db:
    path: /_system/governance
    target_path: /_system/governance
-   read_only: true
+   read_only: false
    registry_root: /
    enable_cache: true
 
+# SSO Configuration
+wso2::sso_authentication:
+  enabled: false
+  login_page: /carbon/admin/login.jsp
+  service_provider_id: wso2am-gw
+  sso_service_url: https://is.dev.wso2.org:9443/samlsso
+  consumer_service_url: https://gw.dev.wso2.org:9443/acs
+
 wso2::enable_thrift_server: false
+
 wso2::thrift_server_host: localhost
+
 wso2::key_validator_client_type: WSClient
 
 wso2::file_list:
@@ -89,12 +91,10 @@ wso2::remove_file_list:
    -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
-   -  "repository/deployment/server/webapps/authenticationendpoint.war"
-   -  "repository/deployment/server/webapps/client-registration#v0.11.war"
-   -  "repository/deployment/server/webapps/oauth2.war"
-   -  "repository/deployment/server/webapps/shindig.war"
-   -  "repository/deployment/server/webapps/throttle#data#v1.war"
 
+wso2::enable_advance_throttling: true
+wso2::enable_data_publisher: true
+wso2::enable_jms_connection_details: true
 wso2::enable_traffic_manager_specific_axis2_configurations: false
 wso2::enable_traffic_manager_specific_registry_configurations: false
 wso2::disable_jms_event_parameters: true
@@ -104,6 +104,3 @@ wso2::ports:
   proxyPort:
     http: 80
     https: 443
-
-wso2::analytics:
-  enabled : true
