Adding pattern-6 , and updates related to all other patterns

--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-worker-lan.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-worker-lan.yaml
@@ -17,15 +17,6 @@ wso2::mgt_hostname: mgt-gw.dev.wso2.org
 wso2::hostname: gw.dev.wso2.org
 wso2::product_profile: gateway-worker
 
-wso2::apim_traffic_manager:
-  host: tm.dev.wso2.org
-  port: 9443
-  receiver_url_port: 9611
-  auth_url_port: 9711
-  jms_url_port: 5672
-  username: "%{hiera('wso2::super_admin::username')}"
-  password: "%{hiera('wso2::super_admin::password')}"
-
 wso2::template_list:
   - repository/deployment/server/synapse-configs/default/api/_AuthorizeAPI_.xml
   - repository/deployment/server/synapse-configs/default/api/_RevokeAPI_.xml
@@ -75,27 +66,33 @@ wso2::registry_mounts:
    registry_root: /
    enable_cache: true
 
-wso2::enable_thrift_server: false
-wso2::thrift_server_host: localhost
-wso2::key_validator_client_type: WSClient
-
 wso2::file_list:
    -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
    -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
-   -  "repository/deployment/server/webapps"
+   -  "repository/deployment/server/webapps/am#sample#calculator#v1.war"
+   -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
+   -  "repository/deployment/server/webapps/authenticationendpoint.war"
+   -  "repository/deployment/server/webapps/client-registration#v0.11.war"
+   -  "repository/deployment/server/webapps/oauth2.war"
+   -  "repository/deployment/server/webapps/shindig.war"
+   -  "repository/deployment/server/webapps/throttle#data#v1.war"
 
-wso2::enable_traffic_manager_specific_axis2_configurations: false
-wso2::enable_traffic_manager_specific_registry_configurations: false
+wso2::enable_thrift_server: false
+wso2::thrift_server_host: localhost
+wso2::key_validator_client_type: WSClient
 wso2::disable_jms_event_parameters: true
 wso2::apply_gateway_specific_configurations: true
+wso2::enable_log_analyzer: true
 
-wso2::ports:
-  proxyPort:
-    http: 80
-    https: 443
+#wso2::ports:
+#  proxyPort:
+#    http: 80
+#    https: 443
 
 wso2::analytics:
   enabled : true
