--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-3/common.yaml
@@ -190,15 +190,12 @@ wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
 wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
-wso2::enable_traffic_manager_specific_axis2_configurations: false
-wso2::enable_traffic_manager_specific_registry_configurations: false
 wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
-wso2::apply_key_manager_specific_configurations: false
 wso2::apply_publisher_specific_configurations: false
 wso2::apply_store_specific_configurations: false
 wso2::apply_gateway_specific_configurations: false
-wso2::enable_log_analyzer: true
+wso2::enable_log_analyzer: false
 
 wso2::environments:
   apim_gateway_lan:
