--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/api-key-manager.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/api-key-manager.yaml
@@ -43,5 +43,10 @@ wso2::sso_authentication:
 wso2::enable_jms_connection_details: false
 wso2::enable_data_publisher: false
 
-
-wso2::apply_key_manager_specific_configurations: true
+wso2::remove_file_list:
+   -  "repository/deployment/server/jaggeryapps"
+   -  "repository/deployment/server/webapps/am#sample#calculator#v1.war"
+   -  "repository/deployment/server/webapps/am#sample#pizzashack#v1.war"
+   -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
