--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-manager-lan.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-4/gateway-manager-lan.yaml
@@ -75,29 +75,32 @@ wso2::sso_authentication:
   sso_service_url: https://is.dev.wso2.org:9443/samlsso
   consumer_service_url: https://gw.dev.wso2.org:9443/acs
 
-wso2::enable_thrift_server: false
-
-wso2::thrift_server_host: localhost
-
-wso2::key_validator_client_type: WSClient
-
 wso2::file_list:
    -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
    -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps"
-   -  "repository/deployment/server/webapps"
+   -  "repository/deployment/server/webapps/am#sample#calculator#v1.war"
+   -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
+   -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
+   -  "repository/deployment/server/webapps/authenticationendpoint.war"
+   -  "repository/deployment/server/webapps/client-registration#v0.11.war"
+   -  "repository/deployment/server/webapps/oauth2.war"
+   -  "repository/deployment/server/webapps/shindig.war"
+   -  "repository/deployment/server/webapps/throttle#data#v1.war"
 
+wso2::enable_thrift_server: false
+wso2::thrift_server_host: localhost
+wso2::key_validator_client_type: WSClient
 wso2::enable_advance_throttling: true
-wso2::enable_data_publisher: true
-wso2::enable_jms_connection_details: true
-wso2::enable_traffic_manager_specific_axis2_configurations: false
-wso2::enable_traffic_manager_specific_registry_configurations: false
+wso2::enable_data_publisher: false
+wso2::enable_jms_connection_details: false
 wso2::disable_jms_event_parameters: true
 wso2::apply_gateway_specific_configurations: true
 
-wso2::ports:
-  proxyPort:
-    http: 80
-    https: 443
+#wso2::ports:
+#  proxyPort:
+#    http: 80
+#    https: 443
