--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-5/common.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-5/common.yaml
@@ -68,7 +68,7 @@ wso2::hosts_mapping:
     ip: 192.168.57.216
     name: mgt-gw.dev.wso2.org
   apim_gw_plus_km:
-    ip: 192.168.57.247
+    ip: 192.168.57.248
     name: am.dev.wso2.org
   apim_traffic_manager:
     ip: 192.168.57.35
@@ -187,15 +187,12 @@ wso2::enable_data_publisher: true
 wso2::enable_block_condition: true
 wso2::enable_jms_connection_details: true
 wso2::disable_jms_event_parameters: false
-wso2::enable_traffic_manager_specific_axis2_configurations: false
-wso2::enable_traffic_manager_specific_registry_configurations: false
 wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
-wso2::apply_key_manager_specific_configurations: false
 wso2::apply_publisher_specific_configurations: false
 wso2::apply_store_specific_configurations: false
 wso2::apply_gateway_specific_configurations: false
-wso2::enable_log_analyzer: true
+wso2::enable_log_analyzer: false
 
 wso2::environments:
   apim_gateway_lan:
