--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-5/gw-plus-km.yaml
@@ -26,7 +26,7 @@ wso2::template_list:
 wso2::clustering:
   enabled: true
   domain: gw.am.wso2.domain
-  sub_domain: mgt
+  sub_domain: worker
   local_member_host: "%{::ipaddress}"
   local_member_port: 4000
 # WKA membership scheme
@@ -44,7 +44,7 @@ wso2::clustering:
 wso2::dep_sync:
   enabled: true
   auto_checkout: true
-  auto_commit: true
+  auto_commit: false
   repository_type: svn
   svn:
     url: https://svn.wso2.com/wso2/svn/people/samitha/depsyncrepo
@@ -76,9 +76,7 @@ wso2::sso_authentication:
   consumer_service_url: https://gw.dev.wso2.org:9443/acs
 
 wso2::enable_thrift_server: false
-
 wso2::thrift_server_host: localhost
-
 wso2::key_validator_client_type: WSClient
 
 wso2::file_list:
@@ -86,7 +84,7 @@ wso2::file_list:
    -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
 
 wso2::remove_file_list:
-   -  "repository/deployment/server/jaggeryapps"
+   -  "repository/deployment/server/jaggeryapps/"
    -  "repository/deployment/server/webapps/am#sample#calculator#v1.war"
    -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
@@ -95,12 +93,11 @@ wso2::remove_file_list:
 wso2::enable_advance_throttling: true
 wso2::enable_data_publisher: true
 wso2::enable_jms_connection_details: true
-wso2::enable_traffic_manager_specific_axis2_configurations: false
-wso2::enable_traffic_manager_specific_registry_configurations: false
 wso2::disable_jms_event_parameters: true
 wso2::apply_gateway_specific_configurations: true
+wso2::enable_log_analyzer: true
 
-wso2::ports:
-  proxyPort:
-    http: 80
-    https: 443
+#wso2::ports:
+#  proxyPort:
+#    http: 80
+#    https: 443
