--- a/wso2am/hieradata/dev/wso2/wso2am/pattern-6/publisher-plus-store.yaml
+++ b/wso2am/hieradata/dev/wso2/wso2am/pattern-6/publisher-plus-store.yaml
@@ -13,9 +13,9 @@
 # limitations under the License.
 
 ---
-wso2::mgt_hostname: pub.dev.wso2.org
-wso2::hostname: pub.dev.wso2.org
-wso2::product_profile: api-publisher
+wso2::mgt_hostname: am.dev.wso2.org
+wso2::hostname: am.dev.wso2.org
+wso2::product_profile: default
 
 wso2::template_list:
   - repository/conf/jndi.properties
@@ -62,14 +62,6 @@ wso2::registry_mounts:
    registry_root: /
    enable_cache: true
 
-# SSO Configuration
-wso2::sso_authentication:
-  enabled: false
-  login_page: /carbon/admin/login.jsp
-  service_provider_id: wso2am-pub
-  sso_service_url: https://is.dev.wso2.org:9443/samlsso
-  consumer_service_url: https://pub.dev.wso2.org:9443/acs
-
 #datasource configurations
 wso2::master_datasources:
     wso2_am_stats_db:
@@ -93,7 +85,7 @@ wso2::enable_data_publisher: false
 wso2::enable_block_condition: false
 wso2::enable_jms_connection_details: false
 wso2::apply_publisher_specific_configurations: true
+wso2::apply_store_specific_configurations: true
 
 wso2::analytics:
   enabled : true
-  skip_event_receiver_connection : true
