--- a/wso2am_analytics/pom.xml
+++ b/wso2am_analytics/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.wso2.puppet</groupId>
     <artifactId>wso2am-analytics-puppet-module</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>WSO2 API Manager Analytics Server Puppet Module</name>
 
     <licenses>
