--- a/wso2am_runtime/pom.xml
+++ b/wso2am_runtime/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.wso2.puppet</groupId>
     <artifactId>wso2am-runtime-puppet-module</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>WSO2 API Manager Puppet Module</name>
 
     <licenses>
